Corrigido as configurações do package.json e tsconfig.json para o funcionamento correto do npm run build e npm run start
